<resources>
    <string name="app_name">CS3270MI Otterstrom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="weight_in_pounds">Weight in Pounds</string>
    <string name="height_in_inches">Height in Inches</string>
    <string name="age">Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="calculate">CALCULATE</string>
    <string name="enter_weight">enter weight</string>
    <string name="enter_height">enter height</string>
    <string name="enter_age">enter age</string>
    <string name="body_fat_percentage">Body Fat Percentage</string>
    <string name="body_mass_index">Body Mass Index</string>
</resources>