<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionFragment">


    <EditText
        android:id="@+id/txtWeightLbs"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="weight"
        android:ems="10"
        android:hint="@string/enter_weight"
        android:inputType="number"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@id/txtHeightInc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />







    <TextView
        android:id="@+id/lblWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/weight_in_pounds"
        app:layout_constraintBottom_toBottomOf="@+id/txtWeightLbs"
        app:layout_constraintEnd_toStartOf="@+id/txtWeightLbs"

        app:layout_constraintTop_toTopOf="@+id/txtWeightLbs" />


    <EditText
        android:id="@+id/txtHeightInc"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="height"
        android:ems="10"
        android:hint="@string/enter_height"
        android:inputType="number"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWeightLbs" />


    <TextView
        android:id="@+id/lblHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/height_in_inches"
        app:layout_constraintBottom_toBottomOf="@+id/txtHeightInc"
        app:layout_constraintEnd_toStartOf="@id/txtHeightInc"
        app:layout_constraintTop_toTopOf="@+id/txtHeightInc" />


    <EditText
        android:id="@+id/txtAge"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="age"
        android:ems="10"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHeightInc" />


    <TextView
        android:id="@+id/lblAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/age"
        app:layout_constraintBottom_toBottomOf="@+id/txtAge"
        app:layout_constraintEnd_toStartOf="@id/txtAge"
        app:layout_constraintTop_toTopOf="@+id/txtAge" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btnCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge">

        <RadioButton
            android:id="@+id/rbtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rbtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

    </RadioGroup>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>